// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/DeviceListQuery matches snapshot for clauses 1`] = `
<section
  className="deviceList-query"
  role="search"
>
  <div
    className="deviceId-search"
  >
    <StyledTextFieldBase
      borderless={true}
      className="search-box"
      iconProps={
        Object {
          "iconName": "Search",
        }
      }
      onChange={[Function]}
      onKeyUp={[Function]}
      role="searchbox"
      value=""
    />
    <CustomizedIconButton
      className="search-button"
      disabled={true}
      iconProps={
        Object {
          "iconName": "Forward",
        }
      }
      onClick={[Function]}
      type="submit"
    />
  </div>
  <div
    className="clauses"
  >
    <DeviceQueryClause
      index={0}
      key="query_clause:0"
      operation="="
      parameterType="status"
      removeClause={[Function]}
      setClause={[Function]}
      value="enabled"
    />
    <CustomizedPrimaryButton
      className="search-pill"
      onClick={[Function]}
    />
    <CustomizedActionButton
      className="search-pill"
      iconProps={
        Object {
          "iconName": "Filter",
        }
      }
      onClick={[Function]}
      type="button"
    />
  </div>
</section>
`;

exports[`components/devices/DeviceListQuery matches snapshot for deviceId 1`] = `
<section
  className="deviceList-query"
  role="search"
>
  <div
    className="deviceId-search"
  >
    <StyledTextFieldBase
      borderless={true}
      className="search-box"
      iconProps={
        Object {
          "iconName": "Search",
        }
      }
      onChange={[Function]}
      onKeyUp={[Function]}
      role="searchbox"
      value="device1"
    />
    <CustomizedIconButton
      className="search-button"
      disabled={false}
      iconProps={
        Object {
          "iconName": "Forward",
        }
      }
      onClick={[Function]}
      type="submit"
    />
  </div>
  <div
    className="clauses"
  >
    <CustomizedActionButton
      className="search-pill"
      iconProps={
        Object {
          "iconName": "Filter",
        }
      }
      onClick={[Function]}
      type="button"
    />
  </div>
</section>
`;
